add query parameter - is_wait_confirm, for get a waiting confirm and not waiting confirm supplies
