# app/api/supply_api.py
@@ -1,6 +1,6 @@
 from sqlalchemy.ext.asyncio import AsyncSession
 
-from fastapi import APIRouter, Depends, HTTPException, status
+from fastapi import APIRouter, Depends, HTTPException, Query, status
 from core.db import db_core
 
 from core import settings
@@ -36,6 +36,7 @@ router = APIRouter(
 
 @router.get("", response_model=SuppliesResponse)
 async def get_supplies(
+    is_wait_confirm: bool = Query(None),
     user_data: UserDataRedis = Depends(get_user_from_redis),
     session: AsyncSession = Depends(db_core.session_getter)
 ):
@@ -45,10 +46,7 @@ async def get_supplies(
         supplies = await supply_service.get_all_supplies_by_user_data(
             user_data=user_data
         )
-            
-        return SuppliesResponse(
-            supplies=[supply.dict for supply in supplies]
-        )
+
     except Exception as e:
         logger.error(
             msg="Error getting supplies\n{}".format(e)
@@ -57,6 +55,10 @@ async def get_supplies(
             status_code=status.HTTP_500_INTERNAL_SERVER_ERROR,
             detail="Internal Server Error"
         )
+                
+    return SuppliesResponse(
+        supplies=[supply.dict for supply in supplies]
+    )
 
 
 @router.post("", status_code=status.HTTP_204_NO_CONTENT)
@@ -97,7 +99,7 @@ async def create_supply(
             status_code=status.HTTP_500_INTERNAL_SERVER_ERROR,
             detail="Internal Server Error"
         )
-
+    await session.commit()
     return {"details": "No content"}
 
 
@@ -118,7 +120,6 @@ async def assemble_or_cancel_supply(
             ),
             supplier_id=user_data.organizer_id
         )
-        return {"details": "No content"}
     except Exception as e:
         session.rollback()
         logger.error(
@@ -128,6 +129,8 @@ async def assemble_or_cancel_supply(
             status_code=status.HTTP_500_INTERNAL_SERVER_ERROR,
             detail="Internal Server Error"
         )
+    await session.commit()
+    return {"details": "No content"}
 
 
 @router.patch("/{supply_id}/status", status_code=status.HTTP_201_CREATED)
@@ -147,7 +150,6 @@ async def update_status(
             ),
             supplier_id=user_data.organizer_id
         )
-        return {"details": "No content"}
     except Exception as e:
         session.rollback()
         logger.error(
@@ -157,3 +159,5 @@ async def update_status(
             status_code=status.HTTP_500_INTERNAL_SERVER_ERROR,
             detail="Internal Server Error"
         )
+    await session.commit()
+    return {"details": "No content"}
